--- a/mysite/grader/templates/grader/essay.html
+++ b/mysite/grader/templates/grader/essay.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 {% block breadcrumb %}
 <li class="breadcrumb-item active"><a href="{% url 'index' %}">Home</a></li>
-<li class="breadcrumb-item active">Essay Scoring</li>
+<li class="breadcrumb-item active">Essay Analysis:</li>
 {% endblock %}
 {% block content %}
 
