--- a/mysite/grader/templates/grader/essay.html
+++ b/mysite/grader/templates/grader/essay.html
@@ -27,7 +27,7 @@
           </p>
           <p class="card-text">Your essay had a grammatic and spelling accuracy of {{essay.accuracy}}%.</p>
           <p class="card-text">Your essay had {{essay.wordcount}} words.</p>
-          <p class="card-text">Your essay was {{essay.tense}}% the same tense.</p>
+          <p class="card-text">Your essay maintained the same tense {{essay.tense}}% of the time.</p>
         </div>
       </div>
     </div>
