--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Essay Grader{% endblock %}</title>
+  <title>{% block title %}S.A. Grader{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 
@@ -12,8 +12,8 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'index' %}">Essay Grader</a>
-      <a class="btn btn-outline-success" href="{% url 'submit' %}">Submit an essay</a>
+      <a class="navbar-brand" href="{% url 'index' %}">S.A. Grader</a>
+      <a class="btn btn-outline-success" href="{% url 'submit' %}">Submit an essay!</a>
     </div>
   </nav>
 
